[gd_scene load_steps=11 format=3 uid="uid://bm3m48raa05fm"]

[ext_resource type="Script" path="res://Scripts/Splash/splash.gd" id="1_jp0ni"]
[ext_resource type="Texture2D" uid="uid://bid4ykjbeiimr" path="res://Assets/Wood and Paper UI/Splash/pixelPionners.png" id="2_qp78a"]
[ext_resource type="Texture2D" uid="uid://gojj1awbfjqa" path="res://Assets/Wood and Paper UI/Splash/logo-Endless.png" id="3_4ru13"]
[ext_resource type="Texture2D" uid="uid://huf0wulsb3pj" path="res://Assets/Wood and Paper UI/Splash/pixelfrog.png" id="4_pcq4m"]

[sub_resource type="Animation" id="Animation_b07ig"]
resource_name = "Do"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PixelPionners:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smqs1"]
_data = {
"Do": SubResource("Animation_b07ig")
}

[sub_resource type="Animation" id="Animation_jenp5"]
resource_name = "Do"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndLess:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1o4c"]
_data = {
"Do": SubResource("Animation_jenp5")
}

[sub_resource type="Animation" id="Animation_rdu7k"]
resource_name = "Do"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PixelFrog:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uvxms"]
_data = {
"Do": SubResource("Animation_rdu7k")
}

[node name="Splash" type="Node2D"]
script = ExtResource("1_jp0ni")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = 852.0
offset_bottom = 502.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PixelPionners" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(413, 239)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qp78a")

[node name="EndLess" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(443, 233)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_4ru13")

[node name="PixelFrog" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(428, 238)
texture = ExtResource("4_pcq4m")

[node name="AnimationPixelPionners" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_smqs1")
}

[node name="AnimationEndLess" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k1o4c")
}

[node name="AnimationPixelFrog" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uvxms")
}

[connection signal="animation_finished" from="AnimationPixelPionners" to="." method="_on_animation_pixel_pionners_animation_finished"]
[connection signal="animation_finished" from="AnimationEndLess" to="." method="_on_animation_end_less_animation_finished"]
